Fix sidebar first navigation item overlapping with header

--- a/src/style/_components.scss
+++ b/src/style/_components.scss
@@ -217,6 +217,10 @@
   @media (max-width: vars.$breakpoint-md) {
     padding-top: calc(vars.$spacing-xl + vars.$spacing-md);
   }
+
+  @media (min-width: vars.$breakpoint-md) {
+    margin-top: 120px;
+  }
 }
 
 .sidebar-toggle {
